updated shopper blog

--- a/bridging-the-gap-revolutionizing-international-shopping-for-indian-shoppers.html
+++ b/bridging-the-gap-revolutionizing-international-shopping-for-indian-shoppers.html
@@ -26,8 +26,7 @@
             line-height: 2;
           "
         >
-          Bridging the Gap: Revolutionizing International Shopping for Indian
-          Shoppers
+           International Sites Shipping to India: From Abroad To Your Home
         </h1>
         <p
           style="
@@ -37,17 +36,11 @@
             margin-top: 20px;
           "
         >
-          As Indian buyers, 🛒we frequently locate ourselves yearning for
-          particular and first-rate merchandise which might be bought the world
-          over. However, the joy of discovering these items is speedy
-          overshadowed by the tough reality of exorbitant shipping prices. The
-          hurdles we are facing in getting merchandise from overseas to India
-          can be enormously frustrating😔🌐, leaving us feeling disadvantaged of
-          access to the worldwide market. Even relying on pals and family who're
-          touring abroad would not constantly guarantee fulfillment.
+          Tvelp has eliminated international courier rates between the USA and India, which can help you save on the desired products.
+
         </p>
 
-        <h4
+        <h2
           style="
             font-size: 20px;
             color: #333;
@@ -56,8 +49,8 @@
             line-height: 2;
           "
         >
-          Limited Options and Restricted Choices🚫:
-        </h4>
+         International Products: Limited Options
+        </h2>
 
         <p style="font-size: 16px; color: #666; line-height: 1.5">
           One of the principle challenges we encounter is the constrained
@@ -68,7 +61,7 @@
           electronics, or artisanal items, we regularly omit out on these
           products due to the lack of less expensive transport alternatives.
         </p>
-        <h4
+        <h2
           style="
             font-size: 20px;
             color: #333;
@@ -77,8 +70,8 @@
             line-height: 2;
           "
         >
-          The Financial Burden of Shipping Costs:
-        </h4>
+          International Courier Rates Being A Burden
+        </h2>
         <p style="font-size: 16px; color: #666; line-height: 1.5">
           When we do locate an international store willing to deliver to India,
           the transport costs may be exorbitant. It's disheartening to add our
@@ -87,7 +80,7 @@
           costs make these purchases financially unviable, forcing us to desert
           the concept of obtaining these coveted merchandise.💸💔
         </p>
-        <h4
+        <h2
           style="
             font-size: 20px;
             color: #333;
@@ -97,7 +90,7 @@
           "
         >
           Reliance on Friends and Family:
-        </h4>
+        </h2>
         <p style="font-size: 16px; color: #666; line-height: 1.5">
           Desperate to overcome the transport obstacle, we lodge to requesting
           Favours from pals or circle of relatives contributors travelling
@@ -106,7 +99,7 @@
           often pose tremendous challenges, resulting in unhappiness while our
           requests cannot be fulfilled.
         </p>
-        <h4
+        <h2
           style="
             font-size: 20px;
             color: #333;
@@ -115,8 +108,8 @@
             line-height: 2;
           "
         >
-          💡Seeking Solutions:
-        </h4>
+          💡Saving Money On Shipping Costs
+        </h2>
         <p style="font-size: 16px; color: #666; line-height: 1.5">
           As Indian purchasers, we want sensible answers to overcome these
           obstacles. However, Tvelp is right here to revolutionize the shopping
@@ -127,7 +120,7 @@
           and high costs. This method that specific and first-rate products that
           have been once out of attain can now be effortlessly obtained. 🛍️ 🎁
         </p>
-        <h4
+        <h2
           style="
             font-size: 20px;
             color: #333;
@@ -136,8 +129,8 @@
             line-height: 2;
           "
         >
-          Trusted Travellers:
-        </h4>
+         From USA To India And Vice Versa: Get Product Delivery
+        </h2>
         <p style="font-size: 16px; color: #666; line-height: 1.5">
           📢Tvelp prioritizes consider and reliability by vetting and verifying
           vacationers at the platform. By leveraging the present tour plans of
