--- a/discover-the-art-of-savvy-shopping.html
+++ b/discover-the-art-of-savvy-shopping.html
@@ -26,8 +26,7 @@
             line-height: 2;
           "
         >
-          👜 Discover the Art of Savvy Shopping with TVELP: Elevating Luxury to
-          Affordable Heights! 💰
+          👜 Overseas Shopping Sites: Affordable Luxury Finds💰
         </h1>
         <p
           style="
@@ -37,13 +36,9 @@
             margin-top: 20px;
           "
         >
-          🛍️ Are you yearning to own the prestigious Michael Kors bag that
-          embodies luxury? Hold onto your excitement, because TVELP is here to
-          transform your aspirations into reality, all while keeping your budget
-          intact. Get ready for a shopping journey that redefines affordability
-          and luxury! 🌌
+          🛍️ Tvelp shows you clever ways to save money on luxury items. 🌌
         </p>
-        <h4
+        <h2
           style="
             font-size: 20px;
             color: #333;
@@ -52,8 +47,8 @@
             line-height: 2;
           "
         >
-          🌐 TVELP vs. Conventional Shopping:
-        </h4>
+          🌐 Shop From USA And Save Big!
+        </h2>
         <p
           style="
             font-size: 16px;
@@ -70,7 +65,7 @@
           the very same bag is available for $100 (approximately ₹8,311),
           marking a monumental difference! 🎒💄
         </p>
-        <h4
+        <h2
           style="
             font-size: 20px;
             color: #333;
@@ -79,8 +74,8 @@
             line-height: 2;
           "
         >
-          💡 TVELP's Ingenious Approach:
-        </h4>
+          💡 Shop And Get Paid To Travel
+        </h2>
         <p
           style="
             font-size: 16px;
@@ -96,7 +91,7 @@
           the travelers, creating a network of global shoppers who share a
           common love for luxury and smart spending. 🎩🌟
         </p>
-        <h4
+        <h2
           style="
             font-size: 20px;
             color: #333;
@@ -105,8 +100,8 @@
             line-height: 2;
           "
         >
-          🌍 Seamlessly Bridging Currencies:
-        </h4>
+          🌍Dollar to Rupee Trend: Facilitating USA and India Purchases
+        </h2>
         <p
           style="
             font-size: 16px;
@@ -131,7 +126,7 @@
             line-height: 2;
           "
         >
-          📣 TVELP:
+          📣 Redefining Luxury Shopping Online In India
         </h4>
         <p
           style="
