--- a/general/make-international-shipping-costs-a-thing-of-the-past.html
+++ b/general/make-international-shipping-costs-a-thing-of-the-past.html
@@ -23,7 +23,8 @@
             line-height: 2;
           "
         >
-          🚀 Make International Shipping Costs A Thing Of The Past 🌎
+          🚀 International Shipping services are a thing of the past with Tvelp
+          🌎
         </h1>
         <span style="display: none">International Shipping Costs</span>
         <p
@@ -34,11 +35,10 @@
             margin-top: 20px;
           "
         >
-          Doesn’t it sound intriguing? A lot of us who want to purchase products
-          from other countries & back off when we look at the shipping fees. We
-          have a proposition that can eliminate such costs! Sounds fascinating,
-          right? Allow us to make you see international shopping in a whole new
-          light.
+          Many of us want to purchase products from foreign shopping websites &
+          back off when we look at the shipping fees. We have a proposition that
+          can eliminate such costs! Sounds fascinating, right? Allow us to make
+          you see this form of shopping in a whole new light.
         </p>
 
         <h4
@@ -50,7 +50,7 @@
             line-height: 2;
           "
         >
-          💡 Revamping International Shopping
+          💡 International Shopping, Simplified
         </h4>
         <span style="display: none">International Shopping</span>
         <p
@@ -104,7 +104,7 @@
             line-height: 2;
           "
         >
-          🌐 P2P Communities, Redefined
+          🌐 Best Of Both Worlds: Shopping And Traveling
         </h4>
         <span style="display: none">P2P Communities</span>
         <p
