--- a/introducing-tvelp-the-global-shopping-revolution.html
+++ b/introducing-tvelp-the-global-shopping-revolution.html
@@ -23,7 +23,7 @@
             line-height: 2;
           "
         >
-          Introducing Tvelp: The Global Shopping Revolution!
+          A P2P World Community That Helps You Shop, Travel, And Earn
         </h1>
         <p
           style="
@@ -33,10 +33,9 @@
             margin-top: 20px;
           "
         >
-          We are pleased to announce the reliable release of Tvelp(Beta), the
-          groundbreaking platform that connects shoppers and travelers
-          international. Say good-bye to the constraints of borders and embody a
-          brand new technology of global shopping!
+          Tvelp is a P2P world community that connects shoppers and travelers
+          globally. Through this platform, you can buy without paying for
+          courier services from the USA to India and vice versa.
         </p>
         <h4
           style="
@@ -47,7 +46,7 @@
             line-height: 2;
           "
         >
-          🛍️ Discover Unique Products:
+          🛍️ International Shopping Online Sans Shipping
         </h4>
         <p
           style="
@@ -71,7 +70,7 @@
             line-height: 2;
           "
         >
-          ✈️ Trusted Travelers:
+          ✈️ Traveler’s Baggage: A Means To Earn
         </h4>
         <p
           style="
@@ -86,7 +85,7 @@
           merchandise from your route and earn greater income along the way.
           It's a win-win for each vacationers and consumers.
         </p>
-        <h4
+        <h2
           style="
             font-size: 20px;
             color: #333;
@@ -95,8 +94,8 @@
             line-height: 2;
           "
         >
-          🌐 Seamless Shopping Experience:
-        </h4>
+          🌐 Shipping-Free Shopping & Profitable Traveling
+        </h2>
         <p
           style="
             font-size: 16px;
@@ -119,7 +118,7 @@
             line-height: 2;
           "
         >
-          ⚠️ Important Disclaimer:
+          ⚠️ Ensuring Safety In Online Shopping
         </h4>
         <p
           style="
