--- a/shopping-smarter-10-things-cheaper-inside-the-usa-than-india.html
+++ b/shopping-smarter-10-things-cheaper-inside-the-usa-than-india.html
@@ -24,7 +24,7 @@
             line-height: 2;
           "
         >
-          Shopping Smarter: 10 Things Cheaper inside the USA than India! 🛍️
+          Top 10 Items to Buy in the USA That Are Cheaper Than in India 🛍️
         </h1>
         <p
           style="
@@ -34,19 +34,13 @@
             margin-top: 20px;
           "
         >
-          The joy of giving is immeasurable, but once in a while, the charge
-          tags on presents can be overwhelming. When attempting to find the
-          perfect gift to your own family, value can frequently be a roadblock.
-          But what if we informed you that there's a way to this gifting
-          dilemma? The USA, a land of abundant alternatives and first-rate
-          bargains, offers an array of merchandise which are price
-          range-friendly compared to their prices in India. In this weblog, we
-          will unveil 10 super present thoughts that won't break the bank,
-          sharing why these objects are greater affordable inside the USA and
-          how you may deliver them for your family with the assist of systems
-          like TVELP.
+          Tvelp has made online shopping online shopping from the USA to India.
+          Shipping from USA to India rates have often been a concern for many
+          shoppers. This platform has made it possible for them to buy
+          international products without paying for shipping. Here are ten items
+          that are cheaper in the USA than in India.
         </p>
-        <h4
+        <h2
           style="
             font-size: 20px;
             color: #333;
@@ -55,8 +49,8 @@
             line-height: 2;
           "
         >
-          Discover Gifting Treasures: 🎁✨
-        </h4>
+          Tvelp: The Gifting Store 🎁✨
+        </h2>
         <p
           style="
             font-size: 16px;
@@ -68,7 +62,7 @@
           Here are 10 gadgets that you may take into account gifting on your
           circle of relatives with out burning a hollow for your pocket:
         </p>
-        <h4
+        <h3
           style="
             font-size: 20px;
             color: #333;
@@ -77,8 +71,8 @@
             line-height: 2;
           "
         >
-          1. Electronics and Gadgets: 📱💻
-        </h4>
+          1. New Gadgets And Electronics : 📱💻
+        </h3>
         <p
           style="
             font-size: 16px;
@@ -91,7 +85,7 @@
           often extra inexpensive within the USA. You can discover the brand new
           fashions at competitive prices.
         </p>
-        <h4
+        <h3
           style="
             font-size: 20px;
             color: #333;
@@ -100,8 +94,8 @@
             line-height: 2;
           "
         >
-          2. Designer Clothing and Fashion Brands: 👗👔
-        </h4>
+          2. Fashion and Clothing: 👗👔
+        </h3>
         <p
           style="
             font-size: 16px;
@@ -114,7 +108,7 @@
           frequently available at a fragment of the fee compared to India. Think
           of renowned names within the fashion industry.
         </p>
-        <h4
+        <h3
           style="
             font-size: 20px;
             color: #333;
@@ -123,8 +117,8 @@
             line-height: 2;
           "
         >
-          3. Beauty and Skincare Products: 💄🌟
-        </h4>
+          3. Beauty And Skincare: 💄🌟
+        </h3>
         <p
           style="
             font-size: 16px;
@@ -137,7 +131,7 @@
           cosmetics, are frequently priced lower within the USA. Choose from a
           extensive variety of international manufacturers.
         </p>
-        <h4
+        <h3
           style="
             font-size: 20px;
             color: #333;
@@ -146,8 +140,8 @@
             line-height: 2;
           "
         >
-          4. Imported Chocolates and Candies: 🍫🍬
-        </h4>
+          4. Sweet Cravings: 🍫🍬
+        </h3>
         <p
           style="
             font-size: 16px;
@@ -160,7 +154,7 @@
           united states. American confectionery brands offer precise flavors and
           gift alternatives.
         </p>
-        <h4
+        <h3
           style="
             font-size: 20px;
             color: #333;
@@ -169,8 +163,8 @@
             line-height: 2;
           "
         >
-          5. Kitchen Appliances and Cookware: 🍳🍽️
-        </h4>
+          5. Cookware Set For Kitchen: 🍳🍽️
+        </h3>
         <p
           style="
             font-size: 16px;
@@ -183,7 +177,7 @@
           known for their durability and innovation. They make thoughtful
           presents for culinary enthusiasts
         </p>
-        <h4
+        <h3
           style="
             font-size: 20px;
             color: #333;
@@ -192,8 +186,8 @@
             line-height: 2;
           "
         >
-          6. Toys and Games for Kids: 🧸🎮
-        </h4>
+          6. Toys And Games: 🧸🎮
+        </h3>
         <p
           style="
             font-size: 16px;
@@ -206,7 +200,7 @@
           price range-pleasant within the USA. Surprise your little ones with a
           variety of alternatives.
         </p>
-        <h4
+        <h3
           style="
             font-size: 20px;
             color: #333;
@@ -216,7 +210,7 @@
           "
         >
           7. Books and Educational Materials: 📚📖
-        </h4>
+        </h3>
         <p
           style="
             font-size: 16px;
@@ -229,7 +223,7 @@
           academic substances in the USA. Consider bestsellers and getting to
           know sources.
         </p>
-        <h4
+        <h3
           style="
             font-size: 20px;
             color: #333;
@@ -238,8 +232,8 @@
             line-height: 2;
           "
         >
-          8. Sports Equipment: 🏀⚽
-        </h4>
+          8. Sports Items: 🏀⚽
+        </h3>
         <p
           style="
             font-size: 16px;
@@ -252,7 +246,7 @@
           competitive fees. Look for famous sports activities manufacturers to
           inspire an energetic life-style.
         </p>
-        <h4
+        <h3
           style="
             font-size: 20px;
             color: #333;
@@ -262,7 +256,7 @@
           "
         >
           9. Fitness and Gym Equipment: 💪🏋️
-        </h4>
+        </h3>
         <p
           style="
             font-size: 16px;
@@ -275,7 +269,7 @@
           range-pleasant health and fitness center gadget from the united
           states. Choose from plenty of exercising tools.
         </p>
-        <h4
+        <h3
           style="
             font-size: 20px;
             color: #333;
@@ -284,8 +278,8 @@
             line-height: 2;
           "
         >
-          10. Specialty Food Items and Beverages: 🍔🍹
-        </h4>
+          10. Food And Drinks: 🍔🍹
+        </h3>
         <p
           style="
             font-size: 16px;
@@ -298,7 +292,7 @@
           gourmet coffee, spices, or area of expertise snacks. These items make
           for delightful surprises.
         </p>
-        <h4
+        <h3
           style="
             font-size: 20px;
             color: #333;
@@ -308,7 +302,7 @@
           "
         >
           Conclusion:
-        </h4>
+        </h3>
         <p
           style="
             font-size: 16px;
