--- a/unleash-your-productivity-with-tvelp-the-ultimate-macbook-pro-shopping-extravaganza.html
+++ b/unleash-your-productivity-with-tvelp-the-ultimate-macbook-pro-shopping-extravaganza.html
@@ -24,8 +24,7 @@
             line-height: 2;
           "
         >
-          🌟🚀 Unleash Your Productivity with TVELP: The Ultimate MacBook Pro
-          Shopping Extravaganza! 💰💻
+          🌟 Apple MacBook Pro M2: Buying Smart, Earning Smart 💰💻
         </h1>
         <p
           style="
@@ -35,23 +34,10 @@
             margin-top: 20px;
           "
         >
-          🛍️ Are you dreaming of elevating your productiveness with the
-          modern-day MacBook Pro offering the effective M2 Max chip, a stunning
-          16.2-inch show, and an super 1TB garage?
+          🛍️ The Apple MacBook Pro M2 Max helps you make savings as well as enhance workplace productivity
         </p>
-        <p
-          style="
-            font-size: 16px;
-            color: #666;
-            line-height: 1.5;
-            margin-top: 20px;
-          "
-        >
-          Hold onto your pleasure because TVELP is here to make your dream come
-          authentic without breaking the bank! Get geared up for a purchasing
-          revolution like never earlier than! 🌌
-        </p>
-        <h4
+      
+        <h2
           style="
             font-size: 20px;
             color: #333;
@@ -60,8 +46,8 @@
             line-height: 2;
           "
         >
-          🌐 India vs. Tvelp: An Unbeatable Price Comparison:
-        </h4>
+          🌐International Shopping Websites vs Tvelp / Become A Money-Saving Expert With Tvelp
+        </h2>
         <p
           style="
             font-size: 16px;
@@ -78,7 +64,7 @@
           the USA, wherein it's astonishingly cheap at simply $3499
           (approximately ₹2,87,857*)! 🎉🤯
         </p>
-        <h4
+        <h2
           style="
             font-size: 20px;
             color: #333;
@@ -87,8 +73,8 @@
             line-height: 2;
           "
         >
-          💡 The TVELP Advantage: Enchanting Rewards for You and the Travelers
-        </h4>
+          💡 Cost-Effective International Shipping & Travel Earnings with One Platform!
+        </h2>
         <p
           style="
             font-size: 16px;
@@ -103,7 +89,7 @@
           come authentic! It's a fabulous win-win that spreads pleasure like
           magic! 🧙‍♂️🧚‍♀️
         </p>
-        <h4
+        <h2
           style="
             font-size: 20px;
             color: #333;
@@ -112,8 +98,8 @@
             line-height: 2;
           "
         >
-          🌍 From USD to INR: A Whirlwind of Unimaginable Savings!
-        </h4>
+          🌍 Make Amazing Savings On Things To Be Bought From The USA
+        </h2>
         <p
           style="
             font-size: 16px;
@@ -137,7 +123,7 @@
             line-height: 2;
           "
         >
-          🎊 Join TVELP & Embark on a Mesmerizing Shopping Journey
+          🎊 International Courier In India Redefined With Tvelp
         </h4>
         <p
           style="
