updated travelers blogs

--- a/earning-while-traveling-your-passport-to-income-on-the-go.html
+++ b/earning-while-traveling-your-passport-to-income-on-the-go.html
@@ -24,7 +24,7 @@
             line-height: 2;
           "
         >
-          Earning While Traveling: 🌍✈️ Your Passport to Income on the Go
+          Travel and Earn: 🌍✈️ Tips for Making Money on the Road
         </h1>
         <p
           style="
@@ -34,19 +34,14 @@
             margin-top: 20px;
           "
         >
-          Introduction: Do you dream of exploring new horizons, embarking on
-          adventures, and filling your passport with stamps from around the
-          world? While wanderlust is a powerful motivator, it's often
-          accompanied by financial concerns. But what if we told you that your
-          passion for travel could be a source of income, not just an expense?
-          Welcome to a world where every journey can pad your wallet, and your
-          desire for adventure can lead to unexpected financial rewards. In this
-          blog, we'll unravel the secret to earning while traveling, with a
-          special focus on TVELP - the platform that empowers travelers to turn
-          their globe-trotting journeys into money-making opportunities.
+          Getting paid to travel would be a dream come true. Restoring your
+          travel while you are on the move is a dream goal. Tvelp has made that
+          an easy process. Not only that, you can also negotiate ‘Travel
+          Rewards’ with customers to make a little extra money than what you are
+          supposed to get. Embrace international travel in a new light!
         </p>
         <p></p>
-        <h4
+        <h2
           style="
             font-size: 20px;
             color: #333;
@@ -56,7 +51,7 @@
           "
         >
           Freelancing on the Go 🌐:
-        </h4>
+        </h2>
         <p
           style="
             font-size: 16px;
@@ -69,7 +64,7 @@
           design, or programming. You can work from virtually anywhere with an
           internet connection.
         </p>
-        <h4
+        <h2
           style="
             font-size: 20px;
             color: #333;
@@ -79,7 +74,7 @@
           "
         >
           Blogging and Vlogging 📸📹:
-        </h4>
+        </h2>
         <p
           style="
             font-size: 16px;
@@ -91,7 +86,7 @@
           Document your adventures and create a blog or vlog. With compelling
           content and the right audience, you can monetize your travel stories.
         </p>
-        <h4
+        <h2
           style="
             font-size: 20px;
             color: #333;
@@ -100,8 +95,8 @@
             line-height: 2;
           "
         >
-          Photography and Stock Imagеs 📷💼:
-        </h4>
+          Travel Photography 📷💼:
+        </h2>
         <p
           style="
             font-size: 16px;
@@ -114,7 +109,7 @@
           images as stock photos. Your travel experiences could be your ticket
           to a passive income source.
         </p>
-        <h4
+        <h2
           style="
             font-size: 20px;
             color: #333;
@@ -124,7 +119,7 @@
           "
         >
           Tеaching and Onlinе Coursеs 📚🎓:
-        </h4>
+        </h2>
         <p
           style="
             font-size: 16px;
@@ -136,7 +131,7 @@
           Share your expertise by offering online courses or becoming an online
           tutor. Technology makes it possible to teach while you travel.
         </p>
-        <h4
+        <h2
           style="
             font-size: 20px;
             color: #333;
@@ -145,8 +140,8 @@
             line-height: 2;
           "
         >
-          Tour Guiding 👣🗺️ :
-        </h4>
+          A Tour Guide Job 👣🗺️ :
+        </h2>
         <p
           style="
             font-size: 16px;
@@ -159,7 +154,7 @@
           becoming a tour guide. Share your local knowledge and earn tips from
           tourists.
         </p>
-        <h4
+        <h2
           style="
             font-size: 20px;
             color: #333;
@@ -168,8 +163,8 @@
             line-height: 2;
           "
         >
-          The TVELP Revolution 🌐🌟:
-        </h4>
+          Shopping And Traveling Under One Roof, Metaphorically 🌐🌟
+        </h2>
         <p
           style="
             font-size: 16px;
