--- a/the-dilemma-of-budget-travel-exploring-opportunities-to-earn-while-flying.html
+++ b/the-dilemma-of-budget-travel-exploring-opportunities-to-earn-while-flying.html
@@ -24,8 +24,7 @@
             line-height: 2;
           "
         >
-          The Dilemma of Budget Travel: Exploring Opportunities to Earn While
-          Flying
+          Get Paid to Explore: Turning Travel into Income Original Paragraph
         </h1>
         <p
           style="
@@ -35,15 +34,11 @@
             margin-top: 20px;
           "
         >
-          Traveling on a finances can be an thrilling and adventurous enjoy, but
-          it often comes with its personal set of demanding situations. One such
-          undertaking arises while we find ourselves in airports wherein the
-          whole lot appears to come with a hefty fee tag. As budget-conscious
-          travelers, we can not help but wonder if there's a manner to make the
-          maximum of our empty baggage space or explore opportunities to earn
-          some extra cash at the same time as at the go.
+          For people who follow a travel budget plan, Tvelp has found a way to
+          help them earn while they are on the go. Unused luggage space can be
+          an asset when restoring the travel budget, or at least a part of it.
         </p>
-        <h4
+        <h2
           style="
             font-size: 20px;
             color: #333;
@@ -53,7 +48,7 @@
           "
         >
           The Costly Airport Experience:
-        </h4>
+        </h2>
         <p
           style="
             font-size: 16px;
@@ -70,7 +65,7 @@
           environment supposed to facilitate our adventure additionally poses a
           financial burden.
         </p>
-        <h4
+        <h2
           style="
             font-size: 20px;
             color: #333;
@@ -79,8 +74,8 @@
             line-height: 2;
           "
         >
-          Exploring New Possibilities ✨🔍:
-        </h4>
+          How To Earn While Traveling? ✨🔍
+        </h2>
         <p
           style="
             font-size: 16px;
@@ -99,7 +94,7 @@
           the client acquire their preferred merchandise but also lets in the
           traveler to earn a few more income along the way. 🌍💲
         </p>
-        <h4
+        <h2
           style="
             font-size: 20px;
             color: #333;
@@ -108,8 +103,8 @@
             line-height: 2;
           "
         >
-          Empty Luggage Space🧳: A Lucrative Asset:
-        </h4>
+          Traveler’s Luggage🧳: An Asset
+        </h2>
         <p
           style="
             font-size: 16px;
