stories and adventure added

--- a/from-explorer-to-global-connector-a-tvelp-adventure.html
+++ b/from-explorer-to-global-connector-a-tvelp-adventure.html
@@ -22,7 +22,7 @@
             line-height: 2;
           "
         >
-          From Explorer to Global Connector: A Tvelp Adventure
+          Exploring The World While Earning
         </h1>
         <p
           style="
