--- a/reshaping-the-watch-hunt-a-tvelp-odyssey.html
+++ b/reshaping-the-watch-hunt-a-tvelp-odyssey.html
@@ -22,7 +22,7 @@
             line-height: 2;
           "
         >
-          Reshaping the Watch Hunt: A Tvelp Odyssey
+          From USA to India: Shipping-Free Fossil Watches
         </h1>
         <p
           style="
