--- a/introducing-tvelp-the-global-shopping-revolution.html
+++ b/introducing-tvelp-the-global-shopping-revolution.html
@@ -46,7 +46,7 @@
             line-height: 2;
           "
         >
-          🛍️ International Shopping Online Sans Shipping
+          🛍️ International Shopping Online Without Shipping Costs
         </h4>
         <p
           style="
