--- a/the-dilemma-of-budget-travel-exploring-opportunities-to-earn-while-flying.html
+++ b/the-dilemma-of-budget-travel-exploring-opportunities-to-earn-while-flying.html
@@ -24,7 +24,7 @@
             line-height: 2;
           "
         >
-          Get Paid to Explore: Turning Travel into Income Original Paragraph
+          Get Paid to Explore: Turning Travel into Income
         </h1>
         <p
           style="
